Universal 26.1.2 port (Fabric + NeoForge via Yumi) + Stonecutter multi-version setup