@@ -10,8 +10,8 @@ import com.teamabode.verdance.core.registry.VerdanceActivities;
 import com.teamabode.verdance.core.registry.VerdanceMemoryModuleTypes;
 import com.teamabode.verdance.core.registry.VerdanceSensorTypes;
 import java.util.List;
-import java.util.Set;
-import net.minecraft.world.entity.ai.Brain;
+import java.util.function.Predicate;
+import net.minecraft.world.entity.ai.ActivityData;
 import net.minecraft.world.entity.ai.behavior.AnimalPanic;
 import net.minecraft.world.entity.ai.behavior.CountDownCooldownTicks;
 import net.minecraft.world.entity.ai.behavior.DoNothing;
@@ -26,7 +26,7 @@ import net.minecraft.world.entity.ai.memory.MemoryStatus;
 import net.minecraft.world.entity.ai.sensing.Sensor;
 import net.minecraft.world.entity.ai.sensing.SensorType;
 import net.minecraft.world.entity.schedule.Activity;
-import net.minecraft.world.item.crafting.Ingredient;
+import net.minecraft.world.item.ItemStack;
 
 public class SilkwormBrain {
     public static final List<MemoryModuleType<?>> MEMORY_MODULES = ImmutableList.of(
@@ -42,28 +42,22 @@ public class SilkwormBrain {
             MemoryModuleType.BREED_TARGET,
             MemoryModuleType.NEAREST_LIVING_ENTITIES,
             MemoryModuleType.NEAREST_VISIBLE_LIVING_ENTITIES,
-            VerdanceMemoryModuleTypes.WANTS_TO_COCOON.get()
+            VerdanceMemoryModuleTypes.WANTS_TO_COCOON
     );
     public static final List<SensorType<? extends Sensor<? super Silkworm>>> SENSORS = ImmutableList.of(
-            VerdanceSensorTypes.SILKWORM_SPECIFIC_SENSOR.get(),
-            VerdanceSensorTypes.SILKWORM_TEMPTATIONS.get(),
+            VerdanceSensorTypes.SILKWORM_SPECIFIC_SENSOR,
+            VerdanceSensorTypes.SILKWORM_TEMPTATIONS,
             SensorType.NEAREST_LIVING_ENTITIES,
             SensorType.HURT_BY
     );
 
-    public static Brain<Silkworm> createBrain(Brain<Silkworm> brain) {
-        addCoreActivities(brain);
-        addIdleActivities(brain);
-        addCocoonActivities(brain);
-
-        brain.setDefaultActivity(Activity.IDLE);
-        brain.setCoreActivities(ImmutableSet.of(Activity.CORE));
-        return brain;
+    public static List<ActivityData<Silkworm>> getActivities() {
+        return List.of(coreActivity(), idleActivity(), cocoonActivity());
     }
 
-    private static void addCoreActivities(Brain<Silkworm> brain) {
-        brain.addActivity(Activity.CORE, 0, ImmutableList.of(
-                new Swim(1.0f),
+    private static ActivityData<Silkworm> coreActivity() {
+        return ActivityData.create(Activity.CORE, 0, ImmutableList.of(
+                new Swim<>(1.0f),
                 new AnimalPanic<>(1.5f),
                 new LookAtTargetSink(45, 90),
                 new MoveToTargetSink(),
@@ -71,22 +65,22 @@ public class SilkwormBrain {
         ));
     }
 
-    private static void addIdleActivities(Brain<Silkworm> brain) {
-        brain.addActivity(Activity.IDLE, ImmutableList.of(
+    private static ActivityData<Silkworm> idleActivity() {
+        return ActivityData.create(Activity.IDLE, ImmutableList.of(
                 Pair.of(0, new FollowTemptation(livingEntity -> 1.0f)),
                 Pair.of(1, createStrollingBehaviors())
         ));
     }
 
-    private static void addCocoonActivities(Brain<Silkworm> brain) {
-        brain.addActivityWithConditions(VerdanceActivities.COCOON.get(), ImmutableList.of(
+    private static ActivityData<Silkworm> cocoonActivity() {
+        return ActivityData.create(VerdanceActivities.COCOON, ImmutableList.of(
                 Pair.of(1, new RunOne<>(ImmutableList.of(
                         Pair.of(new SearchForCocoonTask(), 3),
                         Pair.of(RandomStroll.stroll(1.0f), 2),
                         Pair.of(new DoNothing(30, 60), 1)
                 ))),
                 Pair.of(2, new TurnIntoCocoonTask())
-        ), Set.of(Pair.of(VerdanceMemoryModuleTypes.WANTS_TO_COCOON.get(), MemoryStatus.VALUE_PRESENT)));
+        ), ImmutableSet.of(Pair.of(VerdanceMemoryModuleTypes.WANTS_TO_COCOON, MemoryStatus.VALUE_PRESENT)));
     }
 
     private static RunOne<Silkworm> createStrollingBehaviors() {
@@ -98,12 +92,12 @@ public class SilkwormBrain {
 
     public static void updateActivity(Silkworm silkworm) {
         silkworm.getBrain().setActiveActivityToFirstValid(ImmutableList.of(
-                VerdanceActivities.COCOON.get(),
+                VerdanceActivities.COCOON,
                 Activity.IDLE
         ));
     }
 
-    public static Ingredient getTemptations() {
-        return Ingredient.of(VerdanceItemTags.SILKWORM_FOOD);
+    public static Predicate<ItemStack> getTemptations() {
+        return stack -> stack.is(VerdanceItemTags.SILKWORM_FOOD);
     }
 }
